--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ python:
   - "3.7"
 install:
   - pip install -r requirements.txt
+  - python manage.py collectstatic --noinput
+  - python manage.py migrate
 script:
   - python manage.py test
